# rboid

./: Cargo.toml
src/: boids.rs  colour.rs  lib.rs  main.rs  state.rs
